# ESP32-SDR

./: CMakeLists.txt  README.md  check_wifi.py  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1  test_usb.py  test_vac.py
include/: i2s_audio.h  pins.h  serial_cmd.h  si5351_quad.h  usb_audio.h
omni-rig/: ESP32_S3_SDR.ini
src/: CMakeLists.txt  i2s_audio.c  main.c  serial_cmd.c  si5351_quad.c  usb_audio.c  usb_descriptors.c
